istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  type: NodePort
  selector:
    istio: ingressgateway
  ports:
    - port: 15021
      targetPort: 15021
      name: status-port
    - port: 80
      targetPort: 80
      name: http2
      nodePort: 32080
    - port: 443
      targetPort: 443
      name: https
      nodePort: 32443
    - port: 15012
      targetPort: 15012
      name: tcp-istiod
    - port: 15443
      targetPort: 15443
      name: tls
